# petriEBN

./: .gitignore  README.md  example.py  pyproject.toml  setup.py
petriEBN/: MultiQM.py  __init__.py  dsgrn_support.py  expanded_graph.py  extended_graph.py  petri.py  phi.py  psi.py  table.py
